--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.13.4",
     "framer-motion": "^12.22.0",
     "moment": "^2.30.1",
     "motion": "^12.22.0",
